--- a/website/about.html
+++ b/website/about.html
@@ -47,6 +47,7 @@
             <button class="dropbtn"><a class="main" href="resume.html">eResume</a></button>
             <div class="dropdown_content">
                 <a href="rawresume.html" target="_blank">View raw</a>
+                <a href="testimonials.html">Recommendations & Testimonials</a>
             </div>
         </div>
         <div class="dropdown">
@@ -87,16 +88,10 @@
         <div class="container" style="justify-content: space-around;">
             <p class="topic cursive animated revealL" style="letter-spacing: 0;">About me</p>
             <p class="details animated revealR">Hello, my name is Jing Seng! I was born in Oct 2000 and graduated from
-                Nanyang
-                Polytechnic
-                with
-                a Diploma in Business Management specialising in Human Resources and International Business in April
-                2020. I
-                will be entering Singapore University of Social Sciences in Oct to pursue my bachelors in Information
-                and
-                Communications Technology! My interests include kickboxing, playing the piano, and also writing programs
-                designed to automate tedious
-                processes and also creating visually pleasing games. My MBTI is ESTJ-A for those who are interested!</p>
+                Nanyang Polytechnic with a Diploma in Business Management specialising in Human Resources and
+                International Business in April 2020. My interests include kickboxing, playing the piano, and also
+                writing programs designed to automate tedious processes and also creating visually pleasing games. My
+                MBTI is ESTJ-A for those who are interested!</p>
         </div>
         <br> <br> <br>
     </section>
@@ -137,13 +132,8 @@
                     effort into this activity which landed me in Nanyang Polytechnic's fight team. I went
                     on to represent the school in a competition in January 2018 where I was drafted for
                     the national team. I was then offered an opportunity to represent Singapore in the under 18s
-                    division
-                    but
-                    did not
-                    participate due to flak from my parents and the fact that I was going on a semester long overseas
-                    exchange
-                    program
-                    soon.
+                    division but did not participate due to flak from my parents and the fact that I was going on a
+                    semester long overseas exchange program soon.
                     Nevertheless, I
                     truly treasured my time in the national team and it imparted a few significant values that I
                     still follow to this day.
@@ -157,24 +147,13 @@
                 </p>
                 <p class="info_text">
                     <strong>Playing the piano</strong><br><br>
-                    I started learning how to play the piano in
-                    2007,
-                    after my first
-                    music class in primary school. Since then, my love for music grew and I started seeing this as a
-                    channel
-                    to
-                    unleash my creativity. Growing up, all of my schools have free access to musical instruments for
-                    students
-                    and
-                    having a family
-                    that is supportive both emotionally and financially was a huge bonus.
-                    Being a part of Piano Ensemble(club) in polytechnic has also allowed me to participate in various
-                    events,
-                    concerts and
+                    I started learning how to play the piano in 2007, after my first music class in primary school.
+                    Since then, my love for music grew and I started seeing this as a channel to unleash my creativity.
+                    Growing up, all of my schools have free access to musical instruments for students and having a
+                    family that is supportive both emotionally and financially was a huge bonus. Being a part of Piano
+                    Ensemble(club) in polytechnic has also allowed me to participate in various events, concerts and
                     musical productions.<br><br>
-                    As an "ear-player", I can play almost any song just by listening to it once
-                    or
-                    twice.
+                    As an "ear-player", I can play almost any song just by listening to it once or twice.
                     Do let me know if you have any song requests!
                 </p>
             </div>
@@ -226,40 +205,20 @@
                     wondering
                     why
                     I decided to pursue a career in Technology instead of Business, considering that my Diploma was in
-                    business
-                    management. Here's why.
-                    <br><br>
-                    When I graduated from secondary school, I have already set my sights
-                    on
-                    "doing business"
-                    in the future. I knew that I did not want to conform to the dress codes and 8-5 school schedule that
-                    junior
-                    colleges had
-                    hence chose to enter a polytechnic. In hindsight, 16 year old me actually had no idea what "doing
-                    business"
-                    actually meant and
-                    chose the course just because it sounded cool. Although I did have a lot of fun and did get to
-                    interact
-                    with
-                    many people
-                    with different views on different subjects, I only realised during my internship as a human
-                    resources
-                    assistant that I did not feel
-                    mentally stimulated and that I could not handle doing simple repetitve tasks for the rest of my
-                    career.
-                    This
-                    led
-                    to a lot of self-reflection and through discussion with my friends, it finally dawned on me that I
-                    have
-                    been
-                    fiddling with
-                    software not because of homework or anything, but out of pure interest. I realised that I was
-                    happiest
-                    when
-                    making games or automation software that can improve people's way of life and efficiency. On top of
-                    that,
-                    having new challenges to solve frequently and doing meaningful work that can directly impact others
-                    positively on a daily basis sounds like the perfect job for me.
+                    business management. Here's why.
+                    <br><br> When I graduated from secondary school, I have already set my sights on "doing business" in
+                    the future. I knew that I did not want to conform to the dress codes and a rigid school schedule
+                    that junior colleges had hence chose to enter a polytechnic. In hindsight, 16 year old me actually
+                    had no idea what "doing business" actually meant and chose the course just because it sounded cool.
+                    Although I did have a lot of fun and did get to interact with many people with different views on
+                    different subjects, I only realised during my internship as a human resources assistant that I did
+                    not feel mentally stimulated and that I could not handle doing simple repetitve tasks for the rest
+                    of my career. This led to a lot of self-reflection and through discussion with my friends, it
+                    finally dawned on me that I have been fiddling with software not because of homework or anything,
+                    but out of pure interest. I realised that I was happiest when making games or automation software
+                    that can improve people's way of life and efficiency. On top of that, having new challenges to solve
+                    frequently and doing meaningful work that can directly impact others positively on a daily basis
+                    sounds like the perfect job for me.
                     <br>
                 </p>
             </div>
@@ -286,27 +245,22 @@
             <p class="info_text animated revealU"><strong>My career goals</strong> <br><br>
                 Goal setting is important. Having goals drives one to
                 put in the required effort to work towards it. Those who don't realise the value of goal setting will
-                stagnate and then
-                wonder why everyone around them is advancing while they are stagnant. <br><br>
+                stagnate and then wonder why everyone around them is advancing while they are stagnant.
+                <br><br>
                 Throughout my programming journey so far, I've experimented with different areas of programming and I've
                 found that I enjoy making games the most. Apart from the ability to make ideas come to life, I've seen
-                snippets of warzone's RICHOCHET anti-cheat system trolling
-                game hackers through applying damage shields and I find them really entertaining. It would be a pleasure
-                if
-                I am able to be part of a team
-                that writes software like this. Being part of a team developing and maintaining a game also feels like
-                it
-                would
-                be a lot of fun - especially when you're trying to find loopholes to exploit and then patching it
+                snippets of warzone's RICHOCHET anti-cheat system trolling game hackers through applying damage shields
+                and I find them really entertaining. It would be a pleasure if I am able to be part of a team that
+                writes software like this. Being part of a team developing and maintaining a game also feels like it
+                would be a lot of fun - especially when you're trying to find loopholes to exploit and then patching it
                 yourself.
                 <br><br>
                 My short-term goals would be to learn the knowledge and skills required during my studies while securing
-                internships in the gaming industry to gain experience. My long term goal would be to one day lead a team
-                of
-                competent software engineers in developing games or anti-cheat software.
+                technical internships in the tech industry to gain experience. My long term goal would be to one day
+                lead a team of competent software engineers in developing games or anti-cheat software.
                 <br><br>
                 If not, I would love to lead a competent team towards building, designing and maintaining software that
-                adds values to people's lives. Reading about how software advances such as apple watch's fall detection
+                adds value to others' lives. Reading about how software advances such as apple watch's fall detection
                 system helping save the life of a motorcyclist back in September 2021 after a hit and run really warms
                 my heart. If I am unable to work with games as a career, I would love to at least be developing software
                 that can better others' lives.
