--- a/website/contact.html
+++ b/website/contact.html
@@ -44,6 +44,7 @@
             <button class="dropbtn"><a class="main" href="resume.html">eResume</a></button>
             <div class="dropdown_content">
                 <a href="rawresume.html" target="_blank">View raw</a>
+                <a href="testimonials.html">Recommendations & Testimonials</a>
             </div>
         </div>
         <div class="dropdown">
