--- a/website/proficiencies.html
+++ b/website/proficiencies.html
@@ -44,6 +44,7 @@
             <button class="dropbtn"><a class="main" href="resume.html">eResume</a></button>
             <div class="dropdown_content">
                 <a href="rawresume.html" target="_blank">View raw</a>
+                <a href="testimonials.html">Recommendations & Testimonials</a>
             </div>
         </div>
         <div class="dropdown">
@@ -89,58 +90,59 @@
                     <br>
                     <br>
                     &#8226; Python <br>
-                    <span>
+                    <span class="hide">
                         &#x279F; Able to make use of classes to write solutions for leetcode
                         questions
                         <br>
                     </span>
-                    <span>
+                    <span class="hide">
                         &#x279F; Made games and automation software with graphical user interfaces
                     </span>
-                    <br>
-                    <span>
+
+                    <span class="hide">
                         &#x279F; Passed linkedin skill assessment
                     </span>
-                    <br>
+
                     &#8226; C <br>
-                    <span>
+                    <span class="hide">
                         &#x279F; Able to solve easy leetcode questions
                         <br>
                     </span>
-                    <span>
+                    <span class="hide">
                         &#x279F; Made a few console games (hangman, number guesser etc)
                     </span>
-                    <br>
-                    <span>
+
+                    <span class="hide">
                         &#x279F; Passed linkedin skill assessment
                     </span>
-                    <br>
+
                     &#8226; HTML <br>
-                    <span>
+                    <span class="hide">
                         &#x279F; Used to design this website
                     </span>
-                    <br>
-                    <span>
+
+                    <span class="hide">
                         &#x279F; Passed linkedin skill assessment
                     </span>
-                    <br>
+
                     &#8226; CSS <br>
-                    <span>
+                    <span class="hide">
                         &#x279F; Used to design this website
                     </span>
-                    <br>
-                    <span>
+
+                    <span class="hide">
                         &#x279F; Passed linkedin skill assessment
                     </span>
-                    <br>
+
                     &#8226; Javascript <br>
-                    <span>
-                        &#x279F; Used to design this website
+                    <span class="hide">
+                        &#x279F; Used to design this website <br>
+                        &#x279F; Passed linkedin skill assessment
                     </span>
                     <br>
                 </p>
                 <p class="info_text tskill animated revealR">
-                    <strong>MS Office programs:</strong>
+                    <strong>Other software proficiencies:</strong>
                     <br>
                     <br>
                     &#8226; Excel <br>
