--- a/website/resume.html
+++ b/website/resume.html
@@ -43,6 +43,7 @@
             <button class="dropbtn"><a class="main" href="resume.html">eResume</a></button>
             <div class="dropdown_content">
                 <a href="rawresume.html" target="_blank">View raw</a>
+                <a href="testimonials.html">Recommendations & Testimonials</a>
             </div>
         </div>
         <div class="dropdown">
@@ -63,7 +64,8 @@
         <p class="hide">Mobile: 9009 9178</p>
         <p class="hide">Email: <a class="hlink" href="mailto:jingsengpoh@gmail.com">jingsengpoh@gmail.com</a></p>
         <br>
-        <p class="">Email: <a class="hlink" href="https://jspoh.github.io/contact.html">Click here to email me!</a></p>
+        <p class="">Email: <a class="hlink" href="contact.html">Click here to email
+                me!</a></p>
         <p>Linkedin: <a class="hlink" href="https://www.linkedin.com/in/js-poh"
                 target="_blank">linkedin.com/in/js-poh</a>
         </p>
@@ -82,7 +84,7 @@
         <h2 class="sect">Education</h2>
         <div class="flex">
             <p class="year">2022 - Present</p>
-            <p class="edu_present">Incoming undergraduate at SUSS<br>Bsc in Information and Communications Technology
+            <p class="edu_present hide">Incoming undergraduate at <br>Bsc
             </p>
         </div>
         <div class="flex">
