--- a/website/testimonials.html
+++ b/website/testimonials.html
@@ -14,50 +14,75 @@
 
 <body>
     <header>
-        <div class="dropdown">
-            <button class="dropbtn current"><a class="main" href="about.html">About</a></button>
-            <!--interests, goals, strengths-->
-            <div class="dropdown_content">
-                <a href="about.html#intro">Introduction</a>
-                <a href="about.html#int">Interests</a>
-                <a href="about.html#goals">Goals</a>
+        <nav>
+            <div class="dropdown">
+                <button class="dropbtn current"><a class="main" href="about.html">About</a></button>
+                <!--interests, goals, strengths-->
+                <div class="dropdown_content">
+                    <a href="about.html#intro">Introduction</a>
+                    <a href="about.html#int">Interests</a>
+                    <a href="about.html#goals">Goals</a>
+                </div>
             </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn"><a class="main" href="proficiencies.html">Proficiencies</a></button>
-            <!--Education, work exp, certifications, strengths-->
-            <div class="dropdown_content">
-                <a href="proficiencies.html#edu">Education</a>
-                <a href="proficiencies.html#exp">Work experience</a>
-                <a href="proficiencies.html#cert">Professional certifications</a>
-                <a href="proficiencies.html#skills">Skills</a>
-                <a href="proficiencies.html#str">Strengths</a>
+            <div class="dropdown">
+                <button class="dropbtn"><a class="main" href="proficiencies.html">Proficiencies</a></button>
+                <!--Education, work exp, certifications, strengths-->
+                <div class="dropdown_content">
+                    <a href="proficiencies.html#edu">Education</a>
+                    <a href="proficiencies.html#exp">Work experience</a>
+                    <a href="proficiencies.html#cert">Professional certifications</a>
+                    <a href="proficiencies.html#skills">Skills</a>
+                    <a href="proficiencies.html#str">Strengths</a>
+                </div>
             </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn"><a class="main" href="projects.html">Projects</a></button>
-            <!--My HTMLCSSJS games, python games, automation, telegram bots etc-->
-            <div class="dropdown_content">
-                <a href="projects.html#games">Games</a>
-                <a href="projects.html#prac">Practical applications</a>
+            <div class="dropdown">
+                <button class="dropbtn"><a class="main" href="projects.html">Projects</a></button>
+                <!--My HTMLCSSJS games, python games, automation, telegram bots etc-->
+                <div class="dropdown_content">
+                    <a href="projects.html#games">Games</a>
+                    <a href="projects.html#prac">Practical applications</a>
+                </div>
             </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn"><a class="main" href="resume.html">eResume</a></button>
-            <div class="dropdown_content">
-                <a href="rawresume.html" target="_blank">View raw</a>
-                <a href="testimonials.html">Recommendations & Testimonials</a>
+            <div class="dropdown">
+                <button class="dropbtn"><a class="main" href="testimonials.html">eResume</a></button>
+                <div class="dropdown_content">
+                    <a href="testimonials.html">Recommendations & Testimonials</a>
+                    <a href="resume.html" target="_blank">View resume</a>
+                </div>
             </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn"><a class="main" href="contact.html">Contact</a></button>
-            <div class="dropdown_content">
-                <a href="contact.html">Email</a>
-                <a href="https://linkedin.com/in/js-poh" target="_blank">Linkedin</a>
+            <div class="dropdown">
+                <button class="dropbtn"><a class="main" href="contact.html">Contact</a></button>
+                <div class="dropdown_content">
+                    <a href="contact.html">Email</a>
+                    <a href="https://linkedin.com/in/js-poh" target="_blank">Linkedin</a>
+                </div>
             </div>
-        </div>
+        </nav>
     </header>
     <button class="btt" id="bttButton"><a href="#top">Back to top</a></button>
+
+    <section class="resume">
+        <h1>Resume</h1>
+        <div class="iconWrapper">
+            <div class="iconContainer">
+                <a href="resume.html" target="_blank" rel="noopener noreferrer">
+                    <img src="../lib/viewfile.png" alt="View" class="icon">
+                    <br>
+                    View
+                </a>
+            </div>
+            <div class="iconContainer">
+                <a href="" target="_blank" rel="noopener noreferrer">
+                    <img src="../lib/downloadfile.png" alt="Download" class="icon">
+                    <br>
+                    Download
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <br><br><br><br>
+    <hr>
 
     <section class="recommendations">
         <h1>Recommendations</h1>
