--- a/website/contact.html
+++ b/website/contact.html
@@ -12,48 +12,50 @@
 
 <body>
     <header>
-        <div class="dropdown">
-            <button class="dropbtn"><a class="main" href="about.html">About</a></button>
-            <!--interests, goals, strengths-->
-            <div class="dropdown_content">
-                <a href="about.html#intro">Introduction</a>
-                <a href="about.html#int">Interests</a>
-                <a href="about.html#goals">Goals</a>
+        <nav>
+            <div class="dropdown">
+                <button class="dropbtn current"><a class="main" href="about.html">About</a></button>
+                <!--interests, goals, strengths-->
+                <div class="dropdown_content">
+                    <a href="about.html#intro">Introduction</a>
+                    <a href="about.html#int">Interests</a>
+                    <a href="about.html#goals">Goals</a>
+                </div>
             </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn"><a class="main" href="proficiencies.html">Proficiencies</a></button>
-            <!--Education, work exp, certifications, strengths-->
-            <div class="dropdown_content">
-                <a href="proficiencies.html#edu">Education</a>
-                <a href="proficiencies.html#exp">Work experience</a>
-                <a href="proficiencies.html#cert">Professional certifications</a>
-                <a href="proficiencies.html#skills">Skills</a>
-                <a href="proficiencies.html#str">Strengths</a>
+            <div class="dropdown">
+                <button class="dropbtn"><a class="main" href="proficiencies.html">Proficiencies</a></button>
+                <!--Education, work exp, certifications, strengths-->
+                <div class="dropdown_content">
+                    <a href="proficiencies.html#edu">Education</a>
+                    <a href="proficiencies.html#exp">Work experience</a>
+                    <a href="proficiencies.html#cert">Professional certifications</a>
+                    <a href="proficiencies.html#skills">Skills</a>
+                    <a href="proficiencies.html#str">Strengths</a>
+                </div>
             </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn"><a class="main" href="projects.html">Projects</a></button>
-            <!--My HTMLCSSJS games, python games, automation, telegram bots etc-->
-            <div class="dropdown_content">
-                <a href="projects.html#games">Games</a>
-                <a href="projects.html#prac">Practical applications</a>
+            <div class="dropdown">
+                <button class="dropbtn"><a class="main" href="projects.html">Projects</a></button>
+                <!--My HTMLCSSJS games, python games, automation, telegram bots etc-->
+                <div class="dropdown_content">
+                    <a href="projects.html#games">Games</a>
+                    <a href="projects.html#prac">Practical applications</a>
+                </div>
             </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn"><a class="main" href="resume.html">eResume</a></button>
-            <div class="dropdown_content">
-                <a href="rawresume.html" target="_blank">View raw</a>
-                <a href="testimonials.html">Recommendations & Testimonials</a>
+            <div class="dropdown">
+                <button class="dropbtn"><a class="main" href="testimonials.html">eResume</a></button>
+                <div class="dropdown_content">
+                    <a href="testimonials.html">Recommendations & Testimonials</a>
+                    <a href="resume.html" target="_blank">View resume</a>
+                </div>
             </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn current"><a class="main" href="contact.html">Contact</a></button>
-            <div class="dropdown_content">
-                <a href="contact.html">Email</a>
-                <a href="https://linkedin.com/in/js-poh" target="_blank">Linkedin</a>
+            <div class="dropdown">
+                <button class="dropbtn"><a class="main" href="contact.html">Contact</a></button>
+                <div class="dropdown_content">
+                    <a href="contact.html">Email</a>
+                    <a href="https://linkedin.com/in/js-poh" target="_blank">Linkedin</a>
+                </div>
             </div>
-        </div>
+        </nav>
     </header>
 
     <form action="https://formspree.io/f/meqnpqry" method="POST">
