--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
             cursor: pointer;
         }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KVGZY5CPFT"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-KVGZY5CPFT');
+    </script>
 </head>
 
 <body>
