--- a/website/about.html
+++ b/website/about.html
@@ -140,7 +140,7 @@
                     <strong>Sanda kickboxing</strong><br><br>
                     I started this hobby in May 2017, when I joined
                     Nanyang Polytechnic's Kickboxing
-                    CCA. Knowing I could excel in anything I put my heart to, I invested loads of time and
+                    CCA. Knowing that I could excel in anything I put my heart to, I invested loads of time and
                     effort into this activity which landed me in Nanyang Polytechnic's fight team. I went
                     on to represent the school in a competition in January 2018 where I was drafted for
                     the national team. I was then offered an opportunity to represent Singapore in the under 18s
@@ -165,7 +165,7 @@
                     family that is supportive both emotionally and financially was a huge bonus. Being a part of Piano
                     Ensemble(club) in polytechnic has also allowed me to participate in various events, concerts and
                     musical productions.<br><br>
-                    As an "ear-player", I can play almost any song just by listening to it once or twice.
+                    As I am able to play by ear, I can play almost any song just by listening to it once or twice.
                     Do let me know if you have any song requests!
                 </p>
             </div>
@@ -180,8 +180,8 @@
                     as C for a deeper understanding of how a computer works, and HTML CSS JS in order to easily build
                     programs/websites with nice GUIs. Sticking wit more languages and their purposes.
                     <br><br>
-                    I'm actually planning to pick up C# next to make use of the unity game engine and after I'm more or
-                    less familiar in it, I would like to transition to using unreal engine with C++.
+                    I'm actually planning to pick up C# next to make use of the Unity Engine and after I'm more or
+                    less familiar in it, I would like to transition to using Unreal Engine with C++.
                 </p>
             </div>
             <br>
@@ -217,7 +217,7 @@
                     wondering
                     why
                     I decided to pursue a career in Technology instead of Business, considering that my Diploma was in
-                    business management. Here's why.
+                    Business Management. Here's why.
                     <br><br> When I graduated from secondary school, I have already set my sights on "doing business" in
                     the future. I knew that I did not want to conform to the dress codes and a rigid school schedule
                     that junior colleges had hence chose to enter a polytechnic. In hindsight, 16 year old me actually
@@ -261,7 +261,7 @@
                 <br><br>
                 Throughout my programming journey so far, I've experimented with different areas of programming and I've
                 found that I enjoy making games the most. Apart from the ability to make ideas come to life, I've seen
-                snippets of warzone's RICHOCHET anti-cheat system trolling game hackers through applying damage shields
+                snippets of Warzone's RICHOCHET anti-cheat system trolling game hackers through applying damage shields
                 and I find them really entertaining. It would be a pleasure if I am able to be part of a team that
                 writes software like this. Being part of a team developing and maintaining a game also feels like it
                 would be a lot of fun - especially when you're trying to find loopholes to exploit and then patching it
@@ -272,7 +272,7 @@
                 lead a team of competent software engineers in developing games or anti-cheat software.
                 <br><br>
                 If not, I would love to lead a competent team towards building, designing and maintaining software that
-                adds value to others' lives. Reading about how software advances such as apple watch's fall detection
+                adds value to others' lives. Reading about how software advances such as Apple watch's fall detection
                 system helping save the life of a motorcyclist back in September 2021 after a hit and run really warms
                 my heart. If I am unable to work with games as a career, I would love to at least be developing software
                 that can better others' lives.
