--- a/website/testimonials.html
+++ b/website/testimonials.html
@@ -72,7 +72,7 @@
                 </a>
             </div>
             <div class="iconContainer">
-                <a href="" target="_blank" rel="noopener noreferrer">
+                <a href="../lib/Resume - JS.pdf" target="_blank" rel="noopener noreferrer" download>
                     <img src="../lib/downloadfile.png" alt="Download" class="icon">
                     <br>
                     Download
