--- a/website/projects.html
+++ b/website/projects.html
@@ -53,8 +53,8 @@
             <div class="dropdown">
                 <button class="dropbtn"><a class="main" href="testimonials.html">eResume</a></button>
                 <div class="dropdown_content">
+                    <a href="testimonials.html">Download resume</a>
                     <a href="testimonials.html">Recommendations & Testimonials</a>
-                    <a href="resume.html" target="_blank">View resume</a>
                 </div>
             </div>
             <div class="dropdown">
