--- a/website/testimonials.html
+++ b/website/testimonials.html
@@ -46,8 +46,8 @@
             <div class="dropdown">
                 <button class="dropbtn current"><a class="main" href="testimonials.html">eResume</a></button>
                 <div class="dropdown_content">
+                    <a href="testimonials.html">Download resume</a>
                     <a href="testimonials.html">Recommendations & Testimonials</a>
-                    <a href="resume.html" target="_blank">View resume</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -64,13 +64,6 @@
     <section class="resume">
         <h1>Resume</h1>
         <div class="iconWrapper">
-            <div class="iconContainer">
-                <a href="resume.html" target="_blank" rel="noopener noreferrer">
-                    <img src="../lib/viewfile.png" alt="View" class="icon">
-                    <br>
-                    View
-                </a>
-            </div>
             <div class="iconContainer">
                 <a href="../lib/Resume - JS.pdf" target="_blank" rel="noopener noreferrer" download>
                     <img src="../lib/downloadfile.png" alt="Download" class="icon">
