--- a/website/about.html
+++ b/website/about.html
@@ -97,11 +97,11 @@
         <h1 class="cursive animated revealU" id="#intro">Introduction</h1>
         <div class="container" style="justify-content: space-around;">
             <p class="topic cursive animated revealL" style="letter-spacing: 0;">About me</p>
-            <p class="details animated revealR">Hello, my name is Jing Seng! I was born in Oct 2000 and graduated from
-                Nanyang Polytechnic with a Diploma in Business Management specialising in Human Resources and
-                International Business in April 2020. My interests include kickboxing, playing the piano, and also
-                writing programs designed to automate tedious processes and also creating visually pleasing games. My
-                MBTI is ESTJ-A for those who are interested!</p>
+            <p class="details animated revealR">Hello, my name is Jing Seng! I was born in Oct 2000 and currently
+                pursuing a degree in Information and Communications Technology at Singapore University of Social
+                Sciences. My interests include kickboxing, playing the piano, gaming, and also writing programs designed
+                to automate tedious processes and also creating visually pleasing games. My MBTI is ESTJ-A for those who
+                are interested!</p>
         </div>
         <br> <br> <br>
     </section>
