--- a/projects/demo-websites/e-commerce/liked.html
+++ b/projects/demo-websites/e-commerce/liked.html
@@ -61,6 +61,8 @@
 
     <a href="cart.html"><button id="goToCart">Go to cart</button></a>
 
+    <div class="space"></div>
+
     <script src="script.js"></script>
 </body>
 
